# ros2_openrmf_vda5050_adapter

./: .rmf_schedule_node.yaml  CLAUDE.md  SETUP.md
src/rmf_vda5050_adapter/: CMakeLists.txt  package.xml
src/rmf_vda5050_adapter/config/: adapter.yaml  nav_graph.yaml  rmf.rviz  warehouse.building.yaml
src/rmf_vda5050_adapter/include/rmf_vda5050_adapter/: RobotHandle.hpp  VDA5050Adapter.hpp
src/rmf_vda5050_adapter/launch/: adapter.launch.py  rmf_stack.launch.py
src/rmf_vda5050_adapter/scripts/: dispatch_patrol.py
src/rmf_vda5050_adapter/src/: RobotHandle.cpp  VDA5050Adapter.cpp  main.cpp
src/vda5050_mock_robot/: package.xml  setup.cfg  setup.py
src/vda5050_mock_robot/config/: mock_robot.yaml
src/vda5050_mock_robot/launch/: mock_robot.launch.py
src/vda5050_mock_robot/vda5050_mock_robot/: main.py  mock_robot.py
src/vda5050_nav2_bridge/: package.xml  setup.cfg  setup.py
src/vda5050_nav2_bridge/config/: nav2_bridge.yaml
src/vda5050_nav2_bridge/launch/: nav2_bridge.launch.py
src/vda5050_nav2_bridge/vda5050_nav2_bridge/: main.py  nav2_bridge.py
