<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_vda5050_adapter</name>
  <version>0.1.0</version>
  <description>Open-RMF fleet adapter for VDA5050-compliant robot fleets</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>
  <depend>rmf_fleet_adapter</depend>
  <depend>rmf_traffic</depend>
  <depend>rmf_battery</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>eigen</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>visualization_msgs</depend>
  <depend>mosquitto-dev</depend>

  <exec_depend>rmf_traffic_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
