<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vda5050_nav2_bridge</name>
  <version>0.1.0</version>
  <description>
    Bridges VDA5050 (MQTT) orders to a Nav2-enabled robot (e.g. TurtleBot3).
    Receives VDA5050 orders from the rmf_vda5050_adapter, sends NavigateToPose
    goals to Nav2, and publishes VDA5050 state back from the robot's real pose.
  </description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-paho-mqtt</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
